--- a/hs_detection.ipynb
+++ b/hs_detection.ipynb
@@ -221,7 +221,76 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 26%|██▌       | 61/233 [00:56<02:40,  1.07it/s]"
+      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
+      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
+      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
+      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
+      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
+      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
+      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
+      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
+      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
+      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>▁▂▃▃▄▅▆▆▇█</td></tr><tr><td>train_loss</td><td>▃▁█▂▅▂▄▃▃▂</td></tr><tr><td>val_acc</td><td>▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>val_loss</td><td>▂▄▄▁▃▁▁█▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>10</td></tr><tr><td>train_loss</td><td>0.22511</td></tr><tr><td>val_acc</td><td>0.9423</td></tr><tr><td>val_loss</td><td>0.22055</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">winter-silence-12</strong> at: <a href='https://wandb.ai/abhinav-neil/aiahs/runs/x1o90lrl' target=\"_blank\">https://wandb.ai/abhinav-neil/aiahs/runs/x1o90lrl</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>./wandb/run-20230708_220916-x1o90lrl/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best val acc: 0.9423\n"
      ]
     }
    ],
@@ -244,14 +313,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Evaluation on test set\n",
+    "## 3. Evaluate model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at roberta-large were not used when initializing RobertaModel: ['lm_head.dense.bias', 'lm_head.dense.weight', 'lm_head.bias', 'lm_head.layer_norm.weight', 'lm_head.layer_norm.bias']\n",
+      "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test loss: 0.2208, test acc: 0.9423\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load the best model\n",
+    "model = HateSpeechClassifier('roberta-large', num_labels=2)\n",
+    "checkpoint = torch.load('checkpoints/ckpt_best.pt')\n",
+    "model.load_state_dict(checkpoint['model_state_dict'])\n",
     "test_loss, test_accuracy = evaluate(model, test_data_loader, loss_fn, device)\n",
-    "print(f'Test Loss: {test_loss:.4f}, Test Acc: {test_accuracy:.4f}')"
+    "print(f'test loss: {test_loss:.4f}, test acc: {test_accuracy:.4f}')"
    ]
   }
  ],
