refactor dataloaders, model, trainer (use lightning)

--- a/hs_detection.ipynb
+++ b/hs_detection.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Setup"
+    "### Setup"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.1 Imports"
+    "#### Imports"
    ]
   },
   {
@@ -49,35 +49,29 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from dotenv import load_dotenv\n",
+    "os.environ['CUDA_LAUNCH_BLOCKING'] = '1'    # for debugging\n",
+    "load_dotenv()\n",
     "import torch\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "from torch.optim import AdamW\n",
+    "# from torch.utils.data import Dataset, DataLoader\n",
     "from transformers import AutoTokenizer, AutoModel\n",
     "# custom\n",
-    "from utils import *"
+    "from src.utils import *\n",
+    "from src.models import HateSpeechClassifier\n",
+    "from src.train import train_pl\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "using device: cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set device\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "print(f'using device: {device}')\n",
-    "# autoreload modules\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "# device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "# print(f'using device: {device}')"
    ]
   },
   {
@@ -85,212 +79,147 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Load data"
+    "## Train model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_model_memory_usage(model):\n",
+    "    total_params = sum(p.numel() for p in model.parameters())\n",
+    "    total_buffers = sum(p.numel() for p in model.buffers())\n",
+    "    total_memory = (total_params + total_buffers) * 4  # assuming float32 parameters\n",
+    "    return total_memory / (1024 ** 2)  # Convert bytes to MB\n",
+    "\n",
+    "def get_batch_memory_usage(dataloader):\n",
+    "    for batch in dataloader:\n",
+    "        input_ids = batch['input_ids']\n",
+    "        attention_mask = batch['attention_mask']\n",
+    "        \n",
+    "        # Calculate memory for both tensors\n",
+    "        batch_memory = (input_ids.numel() + attention_mask.numel()) * 4  # assuming float32 data\n",
+    "        return batch_memory / (1024 ** 2)  # Convert bytes to MB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del model\n",
+    "del train_loader, val_loader, test_loader\n",
+    "torch.cuda.empty_cache()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load data\n",
-    "df = pd.read_csv('data/hs_davidson2017.csv')\n",
-    "\n",
-    "# Preprocessing\n",
-    "df['label'] = df['class'].apply(lambda x: 1 if x == 0 else 0)  # Binary indicator of hate_speech or not\n",
-    "df = df[['tweet', 'label']]  # Only keep necessary columns\n",
-    "\n",
-    "# Split the dataset into train, validation and test\n",
-    "train_val_data, test_data = train_test_split(df, test_size=0.2, random_state=42, stratify=df.label)\n",
-    "train_data, val_data = train_test_split(train_val_data, test_size=0.25, random_state=42, stratify=train_val_data.label)  # 0.25 x 0.8 = 0.2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the dataloaders\n",
-    "BATCH_SIZE = 64\n",
-    "MAX_LEN = 128\n",
-    "# Create data loaders\n",
-    "tokenizer = AutoTokenizer.from_pretrained('roberta-large')\n",
-    "train_data_loader, val_data_loader, test_data_loader = create_data_loaders(train_data, val_data, test_data, tokenizer, MAX_LEN, BATCH_SIZE)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Train model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at roberta-large were not used when initializing RobertaModel: ['lm_head.dense.bias', 'lm_head.dense.weight', 'lm_head.bias', 'lm_head.layer_norm.weight', 'lm_head.layer_norm.bias']\n",
+      "Some weights of the model checkpoint at roberta-large were not used when initializing RobertaModel: ['lm_head.dense.weight', 'lm_head.bias', 'lm_head.layer_norm.weight', 'lm_head.dense.bias', 'lm_head.layer_norm.bias']\n",
       "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "Using 16bit Automatic Mixed Precision (AMP)\n",
+      "GPU available: True (cuda), used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "wandb version 0.15.5 is available!  To upgrade, please run:\n",
-       " $ pip install wandb --upgrade"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.15.4"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/home/neil/aiahs/wandb/run-20230708_220916-x1o90lrl</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/abhinav-neil/aiahs/runs/x1o90lrl' target=\"_blank\">winter-silence-12</a></strong> to <a href='https://wandb.ai/abhinav-neil/aiahs' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/abhinav-neil/aiahs' target=\"_blank\">https://wandb.ai/abhinav-neil/aiahs</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/abhinav-neil/aiahs/runs/x1o90lrl' target=\"_blank\">https://wandb.ai/abhinav-neil/aiahs/runs/x1o90lrl</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
-      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
-      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
-      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
-      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
-      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
-      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
-      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
-      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n",
-      "100%|██████████| 233/233 [03:36<00:00,  1.08it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
-       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
-       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
-       "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>▁▂▃▃▄▅▆▆▇█</td></tr><tr><td>train_loss</td><td>▃▁█▂▅▂▄▃▃▂</td></tr><tr><td>val_acc</td><td>▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>val_loss</td><td>▂▄▄▁▃▁▁█▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>10</td></tr><tr><td>train_loss</td><td>0.22511</td></tr><tr><td>val_acc</td><td>0.9423</td></tr><tr><td>val_loss</td><td>0.22055</td></tr></table><br/></div></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run <strong style=\"color:#cdcd00\">winter-silence-12</strong> at: <a href='https://wandb.ai/abhinav-neil/aiahs/runs/x1o90lrl' target=\"_blank\">https://wandb.ai/abhinav-neil/aiahs/runs/x1o90lrl</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Find logs at: <code>./wandb/run-20230708_220916-x1o90lrl/logs</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best val acc: 0.9423\n"
+      "\n",
+      "trainer args:\n",
+      "state: TrainerState(status=<TrainerStatus.INITIALIZING: 'initializing'>, fn=None, stage=None)\n",
+      "barebones: False\n",
+      "_data_connector: <pytorch_lightning.trainer.connectors.data_connector._DataConnector object at 0x7fb9b0708b90>\n",
+      "_accelerator_connector: <pytorch_lightning.trainer.connectors.accelerator_connector._AcceleratorConnector object at 0x7fb9b296ef50>\n",
+      "_logger_connector: <pytorch_lightning.trainer.connectors.logger_connector.logger_connector._LoggerConnector object at 0x7fb9b09e0210>\n",
+      "_callback_connector: <pytorch_lightning.trainer.connectors.callback_connector._CallbackConnector object at 0x7fb9aff45890>\n",
+      "_checkpoint_connector: <pytorch_lightning.trainer.connectors.checkpoint_connector._CheckpointConnector object at 0x7fb9b04ab5d0>\n",
+      "_signal_connector: <pytorch_lightning.trainer.connectors.signal_connector._SignalConnector object at 0x7fb9b04abed0>\n",
+      "fit_loop: <pytorch_lightning.loops.fit_loop._FitLoop object at 0x7fb9b04ab750>\n",
+      "validate_loop: <pytorch_lightning.loops.evaluation_loop._EvaluationLoop object at 0x7fb9aff45710>\n",
+      "test_loop: <pytorch_lightning.loops.evaluation_loop._EvaluationLoop object at 0x7fb9b04ab410>\n",
+      "predict_loop: <pytorch_lightning.loops.prediction_loop._PredictionLoop object at 0x7fb9b04a8290>\n",
+      "accumulate_grad_batches: 1\n",
+      "_default_root_dir: /home/neil/aiahs\n",
+      "callbacks: [<pytorch_lightning.callbacks.early_stopping.EarlyStopping object at 0x7fb9b3149c10>, <pytorch_lightning.callbacks.progress.tqdm_progress.TQDMProgressBar object at 0x7fb9b04ab0d0>, <pytorch_lightning.callbacks.model_summary.ModelSummary object at 0x7fb9b04ab150>, <pytorch_lightning.callbacks.model_checkpoint.ModelCheckpoint object at 0x7fb9b1c72650>]\n",
+      "datamodule: None\n",
+      "check_val_every_n_epoch: 1\n",
+      "reload_dataloaders_every_n_epochs: 0\n",
+      "gradient_clip_val: None\n",
+      "gradient_clip_algorithm: None\n",
+      "_detect_anomaly: False\n",
+      "should_stop: False\n",
+      "profiler: <pytorch_lightning.profilers.base.PassThroughProfiler object at 0x7fb9b0497e50>\n",
+      "_loggers: [<pytorch_lightning.loggers.tensorboard.TensorBoardLogger object at 0x7fb9b05a3f90>]\n",
+      "log_every_n_steps: 5\n",
+      "fast_dev_run: False\n",
+      "overfit_batches: 0.0\n",
+      "limit_train_batches: 1.0\n",
+      "limit_val_batches: 1.0\n",
+      "limit_test_batches: 1.0\n",
+      "limit_predict_batches: 1.0\n",
+      "num_sanity_val_steps: 2\n",
+      "val_check_interval: 1.0\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are using a CUDA device ('NVIDIA A100-SXM4-40GB') that has Tensor Cores. To properly utilize them, you should set `torch.set_float32_matmul_precision('medium' | 'high')` which will trade-off precision for performance. For more details, read https://pytorch.org/docs/stable/generated/torch.set_float32_matmul_precision.html#torch.set_float32_matmul_precision\n",
+      "/opt/conda/envs/aiahs/lib/python3.11/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:615: UserWarning: Checkpoint directory /home/neil/aiahs/model_ckpts exists and is not empty.\n",
+      "  rank_zero_warn(f\"Checkpoint directory {dirpath} exists and is not empty.\")\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "\n",
+      "  | Name     | Type               | Params\n",
+      "------------------------------------------------\n",
+      "0 | model    | RobertaModel       | 355 M \n",
+      "1 | fc       | Linear             | 2.0 K \n",
+      "2 | loss     | CrossEntropyLoss   | 0     \n",
+      "3 | accuracy | MulticlassAccuracy | 0     \n",
+      "------------------------------------------------\n",
+      "355 M     Trainable params\n",
+      "0         Non-trainable params\n",
+      "355 M     Total params\n",
+      "1,421.447 Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0: 100%|██████████| 310/310 [02:46<00:00,  1.87it/s, v_num=2]        "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Metric val_loss improved. New best score: 0.210\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4:  66%|██████▋   | 206/310 [01:46<00:53,  1.94it/s, v_num=2]"
      ]
     }
    ],
@@ -298,18 +227,43 @@
     "# clear GPU memory\n",
     "torch.cuda.empty_cache()\n",
     "\n",
+    "# create data loaders\n",
+    "data_path = 'data/hs_davidson2017.csv'\n",
+    "bsz = 64\n",
+    "max_len = 256\n",
+    "num_workers = 12\n",
+    "tokenizer = AutoTokenizer.from_pretrained('roberta-large')\n",
+    "train_loader, val_loader, test_loader = create_data_loaders(data_path, tokenizer, max_len, bsz, num_workers)\n",
+    "\n",
     "# create the model\n",
     "model = HateSpeechClassifier('roberta-large', num_labels=2)\n",
-    "model = model.to(device)\n",
+    "# model = model.to(device)\n",
     "\n",
-    "# define the loss function and optimizer\n",
-    "loss_fn = nn.CrossEntropyLoss()\n",
-    "optimizer = AdamW(model.parameters(), lr=1e-4)\n",
+    "# check gpu memory usage\n",
+    "# model_memory = get_model_memory_usage(model)\n",
+    "# print(f\"Model Memory Usage: {model_memory:.2f} MB\")\n",
+    "# train_batch_memory = get_batch_memory_usage(train_loader)\n",
+    "# val_batch_memory = get_batch_memory_usage(val_loader)\n",
+    "# print(f\"Train Batch Memory Usage: {train_batch_memory:.2f} MB\")\n",
+    "# print(f\"Validation Batch Memory Usage: {val_batch_memory:.2f} MB\")\n",
     "\n",
-    "# training loop\n",
-    "NUM_EPOCHS = 10\n",
-    "best_val_acc = train(model, train_data_loader, val_data_loader, loss_fn, optimizer, device, NUM_EPOCHS, patience=5, accumulation_steps=10, resume_ckpt='checkpoints/ckpt_best.pt')\n",
-    "print(f'best val acc: {best_val_acc:.4f}')"
+    "# training args\n",
+    "args = {'num_epochs': 10, 'patience': 3, 'ckpt_name': 'ckpt_best_new', 'precision': '16-mixed'}\n",
+    "\n",
+    "# train\n",
+    "trainer, _ = train_pl(model, train_loader, val_loader, args)\n",
+    "\n",
+    "# test\n",
+    "trainer.test(test_dataloaders=test_loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.cuda.empty_cache()"
    ]
   },
   {
