use ucb dataset for training/eval

--- a/data_utils.ipynb
+++ b/data_utils.ipynb
@@ -16,15 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/opt/conda/envs/aiahs/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -34,8 +34,11 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "import torch\n",
+    "import datasets\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from src.api_eooh import *\n",
-    "from src.utils import *\n",
+    "from src.data_utils import *\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +67,122 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Add 'split' col to dataset"
+    "## Davidson"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocess data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total # of samples: 24783\n",
+      "class\n",
+      "1    19190\n",
+      "2     4163\n",
+      "0     1430\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read the dataset\n",
+    "df_david = pd.read_csv('data/hs_davidson2017.csv')\n",
+    "\n",
+    "print(f'total # of samples: {len(df_david)}')\n",
+    "# print(df_hs.hate_speech.value_counts())\n",
+    "# print(df_hs.offensive_language.value_counts())\n",
+    "print(df_david['class'].value_counts())\n",
+    "\n",
+    "# rename cols & create 'label' col\n",
+    "df_david = df_david.rename(columns={'tweet': 'text'})\n",
+    "df_david['label'] = df_david['class'].apply(lambda x: 1 if x == 0 else 0)  # binary indicator of hate_speech or not\n",
+    "\n",
+    "# save to csv\n",
+    "df_david.to_csv('data/davidson_hs.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## UCB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocess UCB data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# samples: 39565, # unique comment_id: 39565\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the dataset and convert to pandas DataFrame\n",
+    "ucb_dataset = datasets.load_dataset('ucberkeley-dlab/measuring-hate-speech', 'binary')\n",
+    "df_ucb = ucb_dataset['train'].to_pandas()\n",
+    "\n",
+    "# create hs label\n",
+    "df_ucb['label'] = (df_ucb['hate_speech_score'] > 0.5).astype(int)\n",
+    "\n",
+    "# list of columns to retain\n",
+    "cols_to_retain = [\n",
+    "    'comment_id', 'sentiment', 'respect', 'insult', 'humiliate', 'status',\n",
+    "    'dehumanize', 'violence', 'genocide', 'attack_defend', 'hatespeech',\n",
+    "    'hate_speech_score', 'text'\n",
+    "]\n",
+    "\n",
+    "# filter the dataset\n",
+    "df_ucb = df_ucb[cols_to_retain]\n",
+    "\n",
+    "# # check if 'comment_id' is unique\n",
+    "# print(f'# samples: {len(df_ucb)}, # unique comment_id: {len(df_ucb.comment_id.unique())}')\n",
+    "\n",
+    "# aggregate scores from diff annotators per comment_id\n",
+    "# Define custom aggregation methods\n",
+    "agg_methods = {col: 'mean' if df_ucb[col].dtype != 'object' else 'first' for col in df_ucb.columns if col != 'comment_id'}\n",
+    "\n",
+    "# group by 'comment_id' and aggregate\n",
+    "df_ucb = df_ucb.groupby('comment_id').agg(agg_methods).reset_index()\n",
+    "\n",
+    "print(f'# samples: {len(df_ucb)}, # unique comment_id: {len(df_ucb.comment_id.unique())}')\n",
+    "\n",
+    "# create ordinal label from 'hate_speech_score'\n",
+    "df_ucb['label'] = (df_ucb['hate_speech_score'] > 0.5).astype(int)\n",
+    "# Split the data into train, validation, and test sets\n",
+    "train_df, temp_df = train_test_split(df_ucb, test_size=0.2, random_state=42, stratify=df_ucb['label'])\n",
+    "val_df, test_df = train_test_split(temp_df, test_size=0.5, random_state=42, stratify=temp_df['label'])\n",
+    "\n",
+    "# add 'split' column to each DataFrame\n",
+    "train_df['split'] = 'train'\n",
+    "val_df['split'] = 'val'\n",
+    "test_df['split'] = 'test'\n",
+    "\n",
+    "# concatenate the DataFrames and save to a file\n",
+    "df_ucb_w_splits = pd.concat([train_df, val_df, test_df])\n",
+    "df_ucb_w_splits.to_csv('data/ucb_hs.csv', index=False)"
    ]
   },
   {
@@ -73,77 +191,28 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "split\n",
-      "train    19826\n",
-      "test      2479\n",
-      "val       2478\n",
-      "Name: count, dtype: int64\n"
-     ]
+     "data": {
+      "text/plain": [
+       "label\n",
+       "0    29211\n",
+       "1    10354\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%script false --no-raise-error\n",
-    "# Read the dataset\n",
-    "dataset = pd.read_csv('data/hs_davidson2017.csv')\n",
-    "\n",
-    "# Set the random seed for reproducibility\n",
-    "np.random.seed(42)\n",
-    "\n",
-    "# Shuffle the dataset\n",
-    "shuffled_dataset = dataset.sample(frac=1, random_state=42)\n",
-    "\n",
-    "# Calculate the exact number of rows for each split\n",
-    "num_train = int(0.8 * len(dataset))\n",
-    "num_val = int(0.1 * len(dataset))\n",
-    "# The remaining rows will be assigned to 'test'\n",
-    "\n",
-    "# Assign 'train', 'val', or 'test' based on the row index\n",
-    "shuffled_dataset['split'] = 'test'\n",
-    "shuffled_dataset.iloc[:num_train, shuffled_dataset.columns.get_loc('split')] = 'train'\n",
-    "shuffled_dataset.iloc[num_train:num_train+num_val, shuffled_dataset.columns.get_loc('split')] = 'val'\n",
-    "\n",
-    "# If you want the dataset in its original order, you can sort it by its index\n",
-    "dataset_with_split = shuffled_dataset.sort_index()\n",
-    "\n",
-    "# Check the distribution of the splits\n",
-    "print(dataset_with_split['split'].value_counts(normalize=False))\n",
-    "\n",
-    "# Save the updated dataset if needed\n",
-    "dataset_with_split.to_csv('data/hs_davidson2017.csv', index=False)\n"
+    "df_ucb_w_splits['label'].value_counts()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Manage channels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "channel name: LGBTQ, uid: 648dcd4b3708dcf1b65d70e9\n"
-     ]
-    }
-   ],
-   "source": [
-    "# get paths\n",
-    "paths = get_paths()\n",
-    "# list channels \n",
-    "my_channels = request_api(requests.get, paths.my_channels).json()\n",
-    "# print(my_channels)\n",
-    "channel = my_channels[0]\n",
-    "channel_path = f\"/channel/{channel['uid']}\"\n",
-    "channel_data = request_api(requests.get, channel_path).json()"
+    "## EOOH"
    ]
   },
   {
@@ -151,6 +220,35 @@
    "metadata": {},
    "source": [
     "### Download channel data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "channel name: LGBTQ, channel uid: 648dcd4b3708dcf1b65d70e9\n",
+      "{'success': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get paths\n",
+    "paths = get_paths()\n",
+    "\n",
+    "# list channels \n",
+    "my_channels = request_api(requests.get, paths.my_channels).json()\n",
+    "# print(my_channels)\n",
+    "channel = my_channels[0]\n",
+    "print(f'channel name: {channel[\"name\"]}, channel uid: {channel[\"uid\"]}')\n",
+    "\n",
+    "# download channel\n",
+    "response = download_channel(channel['uid'])\n",
+    "print(response)"
    ]
   }
  ],
