--- a/hs_detection.ipynb
+++ b/hs_detection.ipynb
@@ -34,11 +34,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/opt/conda/envs/aiahs/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -53,9 +53,10 @@
     "# from torch.utils.data import Dataset, DataLoader\n",
     "from transformers import AutoTokenizer, AutoModel\n",
     "# custom\n",
-    "from src.utils import *\n",
+    "from src.data_utils import *\n",
     "from src.models import HateSpeechClassifier\n",
     "from src.train import train_pl\n",
+    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -70,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at roberta-large were not used when initializing RobertaModel: ['lm_head.dense.weight', 'lm_head.layer_norm.bias', 'lm_head.bias', 'lm_head.layer_norm.weight', 'lm_head.dense.bias']\n",
+      "Some weights of the model checkpoint at roberta-large were not used when initializing RobertaModel: ['lm_head.bias', 'lm_head.layer_norm.weight', 'lm_head.layer_norm.bias', 'lm_head.dense.bias', 'lm_head.dense.weight']\n",
       "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
@@ -87,6 +88,7 @@
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
+      "You are using a CUDA device ('NVIDIA A100-SXM4-40GB') that has Tensor Cores. To properly utilize them, you should set `torch.set_float32_matmul_precision('medium' | 'high')` which will trade-off precision for performance. For more details, read https://pytorch.org/docs/stable/generated/torch.set_float32_matmul_precision.html#torch.set_float32_matmul_precision\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
       "  | Name     | Type              | Params\n",
@@ -106,114 +108,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: 100%|██████████| 310/310 [02:12<00:00,  2.35it/s, v_num=26]       "
+      "Sanity Checking: 0it [00:00, ?it/s]"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Metric val_loss improved. New best score: 1.033\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1: 100%|██████████| 310/310 [02:12<00:00,  2.33it/s, v_num=26]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Metric val_loss improved by 0.058 >= min_delta = 0.0001. New best score: 0.975\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4: 100%|██████████| 310/310 [02:12<00:00,  2.34it/s, v_num=26]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Metric val_loss improved by 0.000 >= min_delta = 0.0001. New best score: 0.975\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 7: 100%|██████████| 310/310 [02:12<00:00,  2.34it/s, v_num=26]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Monitored metric val_loss did not improve in the last 3 records. Best score: 0.975. Signaling Trainer to stop.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 7: 100%|██████████| 310/310 [02:39<00:00,  1.94it/s, v_num=26]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/aiahs/lib/python3.11/site-packages/pytorch_lightning/trainer/connectors/checkpoint_connector.py:148: UserWarning: `.test(ckpt_path=None)` was called without a model. The best model of the previous `fit` call will be used. You can pass `.test(ckpt_path='best')` to use the best model or `.test(ckpt_path='last')` to use the last model. If you pass a value, this warning will be silenced.\n",
-      "  rank_zero_warn(\n",
-      "Restoring states from the checkpoint path at /home/neil/aiahs/model_ckpts/ckpt_best.ckpt\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "training on device: cpu\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "Loaded model weights from the checkpoint at /home/neil/aiahs/model_ckpts/ckpt_best.ckpt\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing DataLoader 0: 100%|██████████| 39/39 [00:05<00:00,  7.78it/s]\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "Runningstage.testing metric      DataLoader 0\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "        test_acc             0.949979841709137\n",
-      "     test_acc_epoch          0.915520966053009\n",
-      "        test_loss           0.9341363906860352\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'test_loss': 0.9341363906860352,\n",
-       "  'test_acc': 0.949979841709137,\n",
-       "  'test_acc_epoch': 0.915520966053009}]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -222,18 +118,22 @@
     "torch.cuda.empty_cache()\n",
     "\n",
     "# create data loaders\n",
-    "data_path = 'data/hs_davidson2017.csv'\n",
+    "data_path = 'data/ucb_hs.csv' # path to data\n",
     "bsz = 64\n",
     "max_len = 256\n",
     "num_workers = 12\n",
-    "tokenizer = AutoTokenizer.from_pretrained('roberta-large')\n",
-    "train_loader, val_loader, test_loader = create_data_loaders(data_path, tokenizer, max_len, bsz, num_workers)\n",
+    "lm_name = 'roberta-large' # lm on HF hub \n",
+    "tokenizer = AutoTokenizer.from_pretrained(lm_name)  # use tokenizer from HF hub\n",
+    "resample = False  # resample to balance classes\n",
+    "\n",
+    "# create data loaders (use resampling to balance classes)\n",
+    "train_loader, val_loader, test_loader = create_dataloaders(data_path, tokenizer, max_len, bsz, num_workers, resample=resample)\n",
     "\n",
     "# create the model\n",
-    "model = HateSpeechClassifier('roberta-large', pos_weight=10.0)\n",
+    "model = HateSpeechClassifier(lm_name, pos_weight=1.0)\n",
     "\n",
     "# training args\n",
-    "args = {'num_epochs': 10, 'precision': '16-mixed', 'patience': 3, 'ckpt_name': 'ckpt_best', 'resume_ckpt': None}\n",
+    "args = {'num_epochs': 10, 'precision': '16-mixed', 'patience': 5, 'ckpt_dir': f'model_ckpts/{lm_name}','ckpt_name': 'ckpt_best', 'resume_ckpt': None}\n",
     "\n",
     "# train\n",
     "model, trainer = train_pl(model, train_loader, val_loader, args)\n",
@@ -244,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +153,7 @@
      "text": [
       "/opt/conda/envs/aiahs/lib/python3.11/site-packages/pytorch_lightning/trainer/connectors/checkpoint_connector.py:148: UserWarning: `.predict(ckpt_path=None)` was called without a model. The best model of the previous `fit` call will be used. You can pass `.predict(ckpt_path='best')` to use the best model or `.predict(ckpt_path='last')` to use the last model. If you pass a value, this warning will be silenced.\n",
       "  rank_zero_warn(\n",
-      "Restoring states from the checkpoint path at /home/neil/aiahs/model_ckpts/ckpt_best.ckpt\n"
+      "Restoring states from the checkpoint path at /home/neil/aiahs/model_ckpts/unitary/toxic-bert/ckpt_best.ckpt\n"
      ]
     },
     {
@@ -261,14 +161,14 @@
      "output_type": "stream",
      "text": [
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "Loaded model weights from the checkpoint at /home/neil/aiahs/model_ckpts/ckpt_best.ckpt\n"
+      "Loaded model weights from the checkpoint at /home/neil/aiahs/model_ckpts/unitary/toxic-bert/ckpt_best.ckpt\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting DataLoader 0: 100%|██████████| 39/39 [00:04<00:00,  7.93it/s]\n",
+      "Predicting DataLoader 0: 100%|██████████| 39/39 [00:01<00:00, 21.29it/s]\n",
       "counts in test_labels: {0: 2355, 1: 124}\n",
       "counts in test_preds: {0: 2479}\n"
      ]
